Bug 56555 - [swrast] [swrastFillInModes:173] bad depth 8
Summary: [swrast] [swrastFillInModes:173] bad depth 8
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: All Linux (All)
: medium normal
Assignee: Ian Romanick
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-30 00:41 UTC by Vinson Lee
Modified: 2012-11-10 02:39 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2012-10-30 00:41:04 UTC
mesa: e4e3b071814d14e56ca3feca8df4974646bc332d (master)

Run a piglit test on swrast. The warning "[swrastFillInModes:173] bad depth 8" appears.

$ ./bin/array-stride -auto
[swrastFillInModes:173] bad depth 8
Mesa warning: failed to remap index 161
Mesa warning: failed to remap index 168
Mesa warning: failed to remap index 171
PIGLIT: {'result': 'pass' }


0398a26097993bbbcc2f418363da00edad5ab5cf is the first bad commit
commit 0398a26097993bbbcc2f418363da00edad5ab5cf
Author: Ian Romanick <ian.d.romanick@intel.com>
Date:   Thu Jul 12 13:49:59 2012 -0700

    swrast: Remove the 2_3_3_REV framebuffer format
    
    There is no gl_format in Mesa that corresponds to this arrangement, so I
    have a very hard time believing that this works.
    
    Signed-off-by: Ian Romanick <ian.d.romanick@intel.com>
    Reviewed-by: Eric Anholt <eric@anholt.net>
    Reviewed-by: Brian Paul <brianp@vmware.com>
    Reviewed-by: Kenneth Graunke <kenneth@whitecape.org>

:040000 040000 42954707dc08b3a095e7b28758ad879d3995329a f38ca6218d9a84500ed495265fdd02f3a9a25ccc M	src
bisect run success
Comment 1 Ian Romanick 2012-10-30 17:45:08 UTC
Patch on the mesa-dev mailing list: http://lists.freedesktop.org/archives/mesa-dev/2012-October/029308.html
Comment 2 Ian Romanick 2012-11-10 02:39:15 UTC
commit 3ec3201f31f6f26029aca66d1967512c8c159245
Author: Ian Romanick <ian.d.romanick@intel.com>
Date:   Tue Oct 30 10:38:54 2012 -0700

    swrast: swrastFillInModes doesn't do 8-bit modes, so don't try
    
    Support for 8-bit modes was removed in commits 0398a26 and bda208a4.
    However, I didn't notice code in dri_init_screen that explicitly tries
    to create this modes.  This is structurally different from other drivers
    (that only create modes that match the display color depth).
    
    Signed-off-by: Ian Romanick <ian.d.romanick@intel.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=56555
    Cc: Vinson Lee <vlee@freedesktop.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.